--- a/MNApp.DAL/MNApp.DAL.csproj
+++ b/MNApp.DAL/MNApp.DAL.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,11 +10,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MNApp.DAL\MNApp.DAL.csproj" />
-    <ProjectReference Include="..\MNApp.Lib\MNApp.Lib.csproj" />
   </ItemGroup>
 
 </Project>
